[package]
name = "image-capture-core"
version = "0.1.1"
description = "Bindings to ImageCaptureCore framework on macOS"
authors = ["Brandon Hamilton <brandon.hamilton@gmail.com>"]
homepage = "https://github.com/brandonhamilton/image-capture-core-rs"
repository = "https://github.com/brandonhamilton/image-capture-core-rs"
license = "MIT"
readme = "README.md"
keywords = ["cocoa", "ImageCapture", "scanner", "camera"]

[dependencies]
bitflags = "1.0.4"
libc = "0.2.43"
objc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.18.0"
core-foundation = "0.6"
core-graphics = "0.17"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
