[package]
name = "image-capture-core"
version = "0.1.5"
description = "Bindings to ImageCaptureCore framework on macOS"
authors = ["Brandon Hamilton <brandon.hamilton@gmail.com>"]
homepage = "https://github.com/brandonhamilton/image-capture-core-rs"
repository = "https://github.com/brandonhamilton/image-capture-core-rs"
license = "MIT"
readme = "README.md"
keywords = ["cocoa", "ImageCapture", "scanner", "camera"]
edition = "2018"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[dependencies]
bitflags = "1.1.0"
libc = "0.2.62"
objc = "0.2.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.19.0"
core-foundation = "0.6.4"
core-graphics = "0.17.3"
